--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="css/style.min.css">
   <script src="js/picturefill.js"></script>
+  <script src="js/svg4everybody.js"></script>
 </head>
 
 <body>
@@ -74,26 +75,26 @@
 
                 <source media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.jpg 1x, img/main-city-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="img/main-city-tablet@1x.jpg 1x, img/main-city-tablet@2x.jpg 2x">
-                <img class="advantage__img--city" src="img/main-city-mobile@1x.jpg" srcset="img/main-city-mobile@2x.jpg 2x" alt="Город Седона">
+                <img class="advantage__img advantage__img--city" src="img/main-city-mobile@1x.jpg" srcset="img/main-city-mobile@2x.jpg 2x" alt="Город Седона">
               </picture>
             </div>
           </div>
           <ul class="advantage__point">
             <li class="advantage__point-list point-list">
               <h3 class="point-list__title point-list__title--house">
-                <svg class="point-list__title--house-icon" width="37" height="37"><use xlink:href="img/sprite.svg#icon-house" aria-label="Иконка дом"></use></svg>
+                <svg class="point-list__title point-list__title--house-icon" width="37" height="37"><use xlink:href="img/sprite.svg#icon-house" aria-label="Иконка дом"></use></svg>
               Жилье</h3>
               <p class="point-list__text point-list__text--house">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
             </li>
             <li class="advantage__point-list advantage__point-list--souvenir point-list">
               <h3 class="point-list__title point-list__title--souvenir">
-                <svg class="point-list__title--souvenir-icon" width="37" height="37"><use xlink:href="img/sprite.svg#icon-souvenir" aria-label="Иконка подарок"></use></svg>
+                <svg class="point-list__title point-list__title--souvenir-icon" width="37" height="37"><use xlink:href="img/sprite.svg#icon-souvenir" aria-label="Иконка подарок"></use></svg>
               Сувениры</h3>
               <p class="point-list__text point-list__text--souvenir">Не только китайского, <span class="point-list__break"><br></span> но и местного производства!</p>
             </li>
             <li class="advantage__point-list advantage__point-list--food point-list">
               <h3 class="point-list__title point-list__title--food">
-                <svg class="point-list__title--food-icon" width="37" height="37"><use xlink:href="img/sprite.svg#icon-food" aria-label="Иконка бургер"></use></svg>
+                <svg class="point-list__title point-list__title--food-icon" width="37" height="37"><use xlink:href="img/sprite.svg#icon-food" aria-label="Иконка бургер"></use></svg>
               Еда</h3>
               <p class="point-list__text point-list__text--food">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
             </li>
@@ -115,14 +116,14 @@
 
                 <source media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.jpg 1x, img/main-bridge-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.jpg 1x, img/main-bridge-tablet@2x.jpg 2x">
-                <img class="advantage__img--bridge" src="img/main-bridge-mobile@1x.jpg" srcset="img/main-bridge-mobile@2x.jpg 2x" alt="Мост дьявола">
+                <img class="advantage__img advantage__img--bridge" src="img/main-bridge-mobile@1x.jpg" srcset="img/main-bridge-mobile@2x.jpg 2x" alt="Мост дьявола">
               </picture>
             </div>
           </div>
         </li>
         <li >
           <div class="advantage__wraper-bottom">
-            <ul class="advantage__wraper-bottom--item">
+            <ul class="advantage__wraper-bottom advantage__wraper-bottom--item">
               <li class="advantage__item advantage__item--area">
                 <header class="advantage__description advantage__description--area advantage-text">
                   <p class="advantage-text__title advantage-text__title--area">Небольшая площадь</p>
@@ -170,17 +171,17 @@
       <ul class="social__list">
         <li class="social__item">
           <a class="social__link social__link--twitter" href="#" aria-label="Мы в Твиттер">
-            <svg class="social__link--twitter-icon" width="21" height="16"><use xlink:href="img/sprite.svg#icon-twitter"></use></svg>
+            <svg class="social__link social__link--twitter-icon" width="21" height="16"><use xlink:href="img/sprite.svg#icon-twitter"></use></svg>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link social__link--facebook" href="#" aria-label="Мы в Фейсбуке">
-            <svg class="social__link--facebook-icon" width="11" height="20"><use xlink:href="img/sprite.svg#icon-facebook"></use></svg>
+            <svg class="social__link social__link--facebook-icon" width="11" height="20"><use xlink:href="img/sprite.svg#icon-facebook"></use></svg>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link social__link--youtube" href="#" aria-label="Мы в Ютубе">
-            <svg class="social__link--youtube-icon" width="21" height="14"><use xlink:href="img/sprite.svg#icon-youtube"></use></svg>
+            <svg class="social__link social__link--youtube-icon" width="21" height="14"><use xlink:href="img/sprite.svg#icon-youtube"></use></svg>
           </a>
         </li>
       </ul>
