--- a/source/photo.html
+++ b/source/photo.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="css/style.min.css">
     <script src="js/picturefill.js"></script>
+    <script src="js/svg4everybody.js"></script>
 
   </head>
 
@@ -66,7 +67,7 @@
 
                 <source media="(min-width: 1200px)" srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg 1x, img/photo-sunset-tablet@2x.jpg 2x">
-                <img class="photo-view__img--sunset" src="img/photo-sunset-mobile@1x.jpg" srcset="img/photo-sunset-mobile@2x.jpg 2x" width="280" alt="Закат Седоны">
+                <img class="photo-view__img photo-view__img--sunset" src="img/photo-sunset-mobile@1x.jpg" srcset="img/photo-sunset-mobile@2x.jpg 2x" width="280" alt="Закат Седоны">
               </picture>
             </a>
 
@@ -91,7 +92,7 @@
 
                 <source media="(min-width: 1200px)" srcset="img/photo-cactus-desktop@1x.jpg 1x, img/photo-cactus-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="img/photo-cactus-tablet@1x.jpg 1x, img/photo-cactus-tablet@2x.jpg 2x">
-                <img class="photo-view__img--flora" src="img/photo-cactus-mobile@1x.jpg" srcset="img/photo-cactus-mobile@2x.jpg 2x" alt="Растительность Седоны">
+                <img class="photo-view__img photo-view__img--flora" src="img/photo-cactus-mobile@1x.jpg" srcset="img/photo-cactus-mobile@2x.jpg 2x" alt="Растительность Седоны">
               </picture>
             </a>
 
@@ -116,7 +117,7 @@
 
                 <source media="(min-width: 1200px)" srcset="img/photo-roads-desktop@1x.jpg 1x, img/photo-roads-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="img/photo-roads-tablet@1x.jpg 1x, img/photo-roads-tablet@2x.jpg 2x">
-                <img class="photo-view__img--road" src="img/photo-roads-mobile@1x.jpg" srcset="img/photo-roads-mobile@2x.jpg 2x" alt="Дорога Седоны">
+                <img class="photo-view__img photo-view__img--road" src="img/photo-roads-mobile@1x.jpg" srcset="img/photo-roads-mobile@2x.jpg 2x" alt="Дорога Седоны">
               </picture>
             </a>
 
@@ -141,7 +142,7 @@
 
                 <source media="(min-width: 1200px)" srcset="img/photo-bridge-desktop@1x.jpg 1x, img/photo-bridge-desktop@2x.jpg 2x">
                 <source media="(min-width: 768px)" srcset="img/photo-bridge-tablet@1x.jpg 1x, img/photo-bridge-tablet@2x.jpg 2x">
-                <img class="photo-view__img--bridge" src="img/photo-bridge-mobile@1x.jpg" srcset="img/photo-bridge-mobile@2x.jpg 2x" alt="Мост Дьявола">
+                <img class="photo-view__img photo-view__img--bridge" src="img/photo-bridge-mobile@1x.jpg" srcset="img/photo-bridge-mobile@2x.jpg 2x" alt="Мост Дьявола">
               </picture>
             </a>
 
@@ -201,17 +202,17 @@
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--twitter" href="#" aria-label="Мы в Твиттер">
-              <svg class="social__link--twitter-icon" width="21" height="16"><use xlink:href="img/sprite.svg#icon-twitter"></use></svg>
+              <svg class="social__link social__link--twitter-icon" width="21" height="16"><use xlink:href="img/sprite.svg#icon-twitter"></use></svg>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--facebook" href="#" aria-label="Мы в Фейсбуке">
-              <svg class="social__link--facebook-icon" width="11" height="20"><use xlink:href="img/sprite.svg#icon-facebook"></use></svg>
+              <svg class="social__link social__link--facebook-icon" width="11" height="20"><use xlink:href="img/sprite.svg#icon-facebook"></use></svg>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--youtube" href="#" aria-label="Мы в Ютубе">
-              <svg class="social__link--youtube-icon" width="21" height="14"><use xlink:href="img/sprite.svg#icon-youtube"></use></svg>
+              <svg class="social__link social__link--youtube-icon" width="21" height="14"><use xlink:href="img/sprite.svg#icon-youtube"></use></svg>
             </a>
           </li>
         </ul>
@@ -219,7 +220,7 @@
       <div class="page-footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Html Академия">
-          <svg class="copyright__html-icon" width="27" height="35"><use xlink:href="img/sprite.svg#icon-copyright" aria-label="Логотип HTML Academy"></use></svg>
+          <svg class="copyright__html-icon" width="27" height="40"><use xlink:href="img/sprite.svg#icon-copyright" aria-label="Логотип HTML Academy"></use></svg>
         </a>
       </div>
 
