--- a/source/form.html
+++ b/source/form.html
@@ -5,8 +5,8 @@
     <title>HTML Academy: Sedona</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="css/style.min.css">
-    <!-- <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&display=swap&subset=cyrillic" rel="stylesheet"> -->
     <script src="js/picturefill.js"></script>
+    <script src="js/svg4everybody.js"></script>
   </head>
 
   <body>
@@ -80,7 +80,7 @@
           </fieldset>
 
           <fieldset class="form__unit form__unit--contact">
-            <legend class="form__title">Контактная информация:</legend>
+            <legend class="form__title form__title--contact">Контактная информация:</legend>
 
             <div class="form__introduction-wrapper">
               <div class="form__introduction form__introduction--contact">
@@ -88,7 +88,7 @@
                 <div class="form__contact-wrapper">
                   <input class="form__contact-number form__field" id="user-number" type="tel" name="phone-number" placeholder="Введите телефон" required>
                   <div class="form__contact-image">
-                    <svg class="form__contact-image--phone" width="18" height="18"><use xlink:href="img/sprite.svg#icon-phone" aria-label="Иконка телефон"></use></svg>
+                    <svg class="form__contact-img form__contact-img--phone" width="18" height="18"><use xlink:href="img/sprite.svg#icon-phone" aria-label="Иконка телефон"></use></svg>
                   </div>
                 </div>
               </div>
@@ -97,7 +97,7 @@
                 <div class="form__contact-wrapper">
                   <input class="form__contact-email form__field" id="user-email" type="email" name="email" placeholder="Введите e-mail" required>
                   <div class="form__contact-image">
-                    <svg class="form__contact-image--email" width="16" height="16"><use xlink:href="img/sprite.svg#icon-mail" aria-label="Иконка письмо"></use></svg>
+                    <svg class="form__contact-img form__contact-img--email" width="16" height="16"><use xlink:href="img/sprite.svg#icon-mail" aria-label="Иконка письмо"></use></svg>
                   </div>
                 </div>
               </div>
@@ -129,7 +129,7 @@
           </fieldset>
 
           <fieldset class="form__unit form__unit--sight">
-            <legend class="form__title">Посещенные <span class="form__break"><br></span>
+            <legend class="form__title form__title--sight">Посещенные <span class="form__break"><br></span>
               достопримечательности:</legend>
 
             <ul class="form__sight-wrapper">
@@ -160,7 +160,7 @@
           </fieldset>
 
           <fieldset class="form__unit form__unit--emotion">
-            <legend class="form__title">Опишите свои эмоции:</legend>
+            <legend class="form__title form__title--emotion">Опишите свои эмоции:</legend>
             <textarea class="form__text-field" name="comment" id="user-emotion" rows="7" placeholder="Опишите подробно все свои восторги"></textarea>
             <div class="form__button-wrapper">
               <input type="submit" class="form__button button" value="Отправить отзыв">
@@ -181,17 +181,17 @@
         <ul class="social__list">
           <li class="social__item">
             <a class="social__link social__link--twitter" href="#" aria-label="Мы в Твиттер">
-              <svg class="social__link--twitter-icon" width="21" height="16"><use xlink:href="img/sprite.svg#icon-twitter"></use></svg>
+              <svg class="social__link social__link--twitter-icon" width="21" height="16"><use xlink:href="img/sprite.svg#icon-twitter"></use></svg>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--facebook" href="#" aria-label="Мы в Фейсбуке">
-              <svg class="social__link--facebook-icon" width="11" height="20"><use xlink:href="img/sprite.svg#icon-facebook"></use></svg>
+              <svg class="social__link social__link--facebook-icon" width="11" height="20"><use xlink:href="img/sprite.svg#icon-facebook"></use></svg>
             </a>
           </li>
           <li class="social__item">
             <a class="social__link social__link--youtube" href="#" aria-label="Мы в Ютубе">
-              <svg class="social__link--youtube-icon" width="21" height="14"><use xlink:href="img/sprite.svg#icon-youtube"></use></svg>
+              <svg class="social__link social__link--youtube-icon" width="21" height="14"><use xlink:href="img/sprite.svg#icon-youtube"></use></svg>
             </a>
           </li>
         </ul>
@@ -199,7 +199,7 @@
       <div class="page-footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Html Академия">
-          <svg class="copyright__html-icon" width="27" height="35"><use xlink:href="img/sprite.svg#icon-copyright" aria-label="Логотип HTML Academy"></use></svg>
+          <svg class="copyright__html-icon" width="27" height="40"><use xlink:href="img/sprite.svg#icon-copyright" aria-label="Логотип HTML Academy"></use></svg>
         </a>
       </div>
 
