--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link rel="stylesheet" href="css/style.min.css">
   <script src="js/picturefill.js"></script>
-  <script src="js/svg4everybody.js"></script>
+  <script src="js/svgxuse.js" defer></script>
 </head>
 
 <body>
@@ -52,8 +52,7 @@
       </div>
 
       <div class="description__text">
-        <p class="description__main">Седона — небольшой
-          городок в Аризоне, заслуживающий большего!</p>
+        <p class="description__main">Седона — небольшой <span class="description__break"><br></span>городок в Аризоне, заслуживающий большего!</p>
       </div>
     </section>
 
@@ -67,7 +66,7 @@
               <p class="advantage-text__number">— №1 —</p>
               <p class="advantage-text__intro advantage-text__intro--city">Седона не аттракцион для туристов, там течет своя жизнь</p>
             </header>
-            <div class="advantage__img ">
+            <div class="advantage__image">
               <picture>
                 <source type="image/webp" media="(min-width: 1200px)" srcset="img/main-city-desktop@1x.webp 1x, img/main-city-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/main-city-tablet@1x.webp 1x, img/main-city-tablet@2x.webp 2x">
@@ -108,7 +107,7 @@
               <p class="advantage-text__number">— №2 —</p>
               <p class="advantage-text__intro advantage-text__intro--bridge">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
             </header>
-            <div class="advantage__img advantage__img--bridge">
+            <div class="advantage__image advantage__image--bridge">
               <picture>
                 <source type="image/webp" media="(min-width: 1200px)" srcset="img/main-bridge-desktop@1x.webp 1x, img/main-bridge-desktop@2x.webp 2x">
                 <source type="image/webp" media="(min-width: 768px)" srcset="img/main-bridge-tablet@1x.webp 1x, img/main-bridge-tablet@2x.webp 2x">
@@ -142,7 +141,7 @@
                 <header class="advantage__description advantage__description--tourists advantage-text">
                   <p class="advantage-text__title advantage-text__title--tourists">Мало туристов</p>
                   <p class="advantage-text__number">— №5 —</p>
-                  <p class="advantage-text__intro advantage-text__intro--tourists">Большинство едет в Гранд Каньон и толпится там</p>
+                  <p class="advantage-text__intro advantage-text__intro--tourists">Большинство едет в Гранд Каньон <span class="advantage__tourist-break"><br></span> и толпится там</p>
                 </header>
               </li>
             </ul>
