--- a/source/photo.html
+++ b/source/photo.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="css/style.min.css">
     <script src="js/picturefill.js"></script>
-    <script src="js/svg4everybody.js"></script>
-
+    <script src="js/svgxuse.js" defer></script>
   </head>
 
   <body>
