--- a/source/index.html
+++ b/source/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="css/style.min.css">
   <script src="js/picturefill.js"></script>
   <script src="js/svgxuse.js" defer></script>
+
+  <link rel="preload" href="fonts/ptsans.woff" as="font">
+  <link rel="preload" href="fonts/ptsans.woff2" as="font">
+  <link rel="preload" href="fonts/ptsansbold.woff" as="font">
+  <link rel="preload" href="fonts/ptsansbold.woff2" as="font">
 </head>
 
 <body>
@@ -154,7 +159,7 @@
       <div class="book__form">
         <h3 class="book__title">Заинтересовались?</h3>
         <p class="book__action">Укажите предполагаемые даты поездки,<span class="book__break"><br></span> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="book__write button" href="#">Найти гостиницу</a>
+        <a class="book__write button" href="form.html">Найти гостиницу</a>
       </div>
     </section>
 
