--- a/source/photo.html
+++ b/source/photo.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/style.min.css">
     <script src="js/picturefill.js"></script>
     <script src="js/svgxuse.js" defer></script>
+
+    <link rel="preload" href="fonts/ptsans.woff" as="font">
+    <link rel="preload" href="fonts/ptsans.woff2" as="font">
+    <link rel="preload" href="fonts/ptsansbold.woff" as="font">
+    <link rel="preload" href="fonts/ptsansbold.woff2" as="font">
   </head>
 
   <body>
